ASM lib updated to 9.7, NameExtractor updated, Tasks are clearly noted in README of PlayOut agent